html/css/style.less
/* ... */
#media{
	.images{
		a, a:visited{
			float: left;
			display: block;
			
			img{
				width: 100%;
				margin: 0 auto;
				opacity: .9;
				}
			}
		
		a:hover, a:focus{
			img{
				opacity: 1;
				}
			}
		}
	}

#media.medium{
	.images{
		a, a:visited{
			width: 22.580645161%;
			margin-right: 3.55%;
			margin-bottom: 3%;
			}
		
		a:nth-child(2n+4){
			margin-right: 0;
			}
		}
	
	.videos{
		iframe{
			width: 100%;
			height: 50%;
			margin-bottom: 20px;
			}
		}
	}

#media.small{
	.images{
		a, a:visited{
			width: 46.67%;
			margin-right: 6.666666667%;
			margin-bottom: 7%;
			}
		
		a:nth-child(2n+2){
			margin-right: 0;
			}
		}
	
	.videos{
		iframe{
			width: 100%;
			height: 30%;
			margin-bottom: 20px;
			}
		}
	}

#contact ul, #team ul{
	list-style: none;
	
	li{	
		overflow: hidden;
		clear: both;
		display: block;
		margin-bottom: 10px;
		}
	
	img{
		float: left;
		display: block;
		width: 13.333333333%;
		min-width: 40px;
		margin-right: 6.666666667%;
		}
	
	a, a:visited{
		clear: both;
		color: @text-color;
		
		strong{
			display: block;
			padding-top: 2px;
			}
		}
		
	a:hover, a:focus{
		text-decoration: none;
		}
	}
	
#contact ul{
	img{
		opacity: .5;
		.transition;
		}
	
	a:hover, a:focus{
	
		img{
			opacity: 1;
			}
		
		p{
			color: @link-hover;
			
			strong{
				color: @text-color;
				}
			}
		}
	}

#team ul{
	a:hover, a:focus{
		strong{
			text-decoration: underline;
			color: @link-hover;
			}
		}
	}

.slider{
	position: relative;
	overflow: hidden;
	
	.slider-controls{
		position: absolute;
		top: 8px;
		right: 10px;
	
		a, a:visited{
			display: block;
			float: left;
			width: 5px;
			height: 5px;
			margin-right: 10px;
			.border-radius(1px);
			background-color: @text-light-color;
			text-indent: -13000px;
			}
		
		a:last-child{
			margin-right: 0;
			}
		
		a:hover, a:focus{
			background-color: darken(@text-light-color, 20%);
			}
		
		a:active{
			background-color: darken(@text-light-color, 30%);
			}
		
		a.current, a.current:visited{
			background-color: @text-color;
			}
	}
	
	.slider-item{
		}	
	}

#projects.slider{
	article{
		overflow: hidden;
		min-height: 165px;
		}
	}
	
#conversations{
	form{
		overflow: hidden;
		width: 98.25%;
		margin: 0 auto 20px;
		}
	
	> a, > a:visited{
		clear: both;
		display: block;
		margin-bottom: 20px;
		padding: 2%;
		.border-radius;
		color: @text-color;
		cursor: pointer;
			
		h2, p{
			width: 83.333333333%;
			padding-left: 16.666666666666666%;
			text-transform: none;
			}
		
		img{
			float: left;
			width: 13.333333333%;
			margin-right: 3.333333333%;
			opacity: .9;
			}
		}
	
	> a:hover, > a:focus{
		text-decoration: none;
		background-color: rgba(0,0,0,.05);
		
		img{
			opacity: 1;
			}
		}
	
	> a:active{
		background-color: rgba(0,0,0,.07);
		.box-shadow-inset(0,1px,3px,rgba(0,0,0,.15));
		}
	
	> a.current{
		background-color: rgba(0,0,0,.07);
		.box-shadow-inset(0,1px,5px,rgba(0,0,0,.25));
		}
	}

#content #conversation.medium{
		
	article{
		margin-bottom: 20px;
		
		form{
			overflow: hidden;
			
			input[type="text"]{
				width: 89.173228346%;
				}
			}
		}
	}

.with-secondary{
	position: relative;
	
	.secondary{
		position: absolute;
		top: 3px;
		right: 0;
		width: 90%;
		text-align: right;
		
		a, a:visited, p{
			margin-right: 2%;
			font-weight: bold;
			text-transform: uppercase;
			color: @text-light-color;
			}
		
		a:hover, a:focus{
			text-decoration: none;
			color: darken(@text-light-color, 20%);
			}
		
		a:active{
			color: darken(@text-light-color, 30%);
			}
		
		a.current, a.current:visited{
			color: @text-color;
			}
				
		a.flag, a.delete, a.edit, a.flag:visited, a.delete:visited, a.edit:visited{
			float: left;
			display: block;
			margin-right: 0;
			padding: 5px;
			text-indent: -13000px;
			text-align: left;
			opacity: 0;
			.transition;
			}
			
		a.flag{
			width: 10px;
			height: 15px;
			background: url('../images/site/icon-flag.png') no-repeat center center;
			}
		
		a.delete{
			width: 11px;
			height: 12px;
			background: url('../images/site/icon-delete.png') no-repeat center center;
			}
		
		a.edit{
			width: 14px;
			height: 14px;
			padding: 0 5px 8px;
			background: url('../images/site/icon-edit.png') no-repeat center center;
			}
		
		a.current{
			opacity: 1;
			}
		}
	}

.location-and-time{
	min-height: 70px;
	}

.badge{
	padding: 1px 8px;
	.border-radius(10px);
	background-color: @text-light-color;
	font-weight: bold;
	text-decoration: none;
	color: #fff;
	}
	
.badge:hover, .badge:focus, a:hover .badge, a:focus .badge{
	background-color: @green;
	}

.badge:active, a:active .badge{
	background-color: darken(@green,5%);
	}

.pagination{
	clear: both;
	padding-top: 3%;
	font-size: 1.2em;
	font-weight: bold;
	text-align: center;
	text-transform: uppercase;
	
	a, a:visited{
		margin-right: 1%;
		color: @text-light-color;
		}
		
	a:hover, a:focus{
		text-decoration: none;
		color: darken(@text-light-color, 20%);
		}
	
	a:active{
		color: darken(@text-light-color, 30%);
		}
	
	a.current, a.current:visited{
		color: @text-color;
		}
	
	a:last-child{
		margin-right: 0;
		}
	}

.incomplete{
	clear: both;
	float: right;
	
	strong{
		a, a:visited{
			color: @link-color;
			}
			
		a:hover, a:focus{
			color: @link-hover;
			}
		
		a:active{
			color: @link-active;
			}
		}
	}

.empty{
	margin-bottom: 50px;
	padding: 0 3%;
	text-align: center;
	}

.minor{
	font-weight: lighter;
	color: @text-light-color;
	}

.extra-spacing{
	margin-top: 20px;
	}




/* FORM STYLES
====================================================================================================*/	

fieldset{
	max-width: 100%;
	margin-bottom: 5%;
	
	label, input, textarea{
		display: block;
		}
	
	label.helper-link{
		width: auto;
		}
	
	.helper-link{
		float: left;
		width: auto;
		max-width: none;
		text-align: left;
		line-height: normal;
		}
	}

label{
	float: left;
	width: 100%;
	margin: 0 10px 5px 0;
	font-weight: bold;
	}
/* ... */

